added google fonts and home icon

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -10,9 +10,20 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
+  <!-- customized fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Carter+One|Eczar" rel="stylesheet">
   <!-- Font Awesome Glyphicons -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+  <style>
+    .jumbotron h1{
+      font-family: 'Carter One', cursive;
+
+    }
+    body {
+      
+      font-family: 'Eczar', serif;
+    }
+  </style>
 
 </head>
 
